--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "pinia": "^3.0.3",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -22,6 +25,7 @@
     "@vitejs/plugin-vue-jsx": "^5.0.0",
     "@vue/tsconfig": "^0.7.0",
     "npm-run-all2": "^8.0.4",
+    "sass": "^1.89.2",
     "typescript": "~5.8.0",
     "vite": "^7.0.0",
     "vite-plugin-vue-devtools": "^7.7.7",
