--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@vueuse/head": "^2.0.0",
     "axios": "^1.12.2",
     "pinia": "^3.0.3",
     "vee-validate": "^4.15.1",
